syntax = "proto3";

package userssrv;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "GSA.Grpc";
option go_package = "/pb";


service UsersService {
  rpc Ping(PingRequest) returns (PingReply);
  rpc LoginWithEmail(LoginWithEmailRequest) returns (LoginWithEmailReply);
  rpc Register(RegisterRequest) returns (RegisterReply);
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateReply);
}

message PingRequest {
}

message PingReply {
  bool pong = 1;
}

message LoginWithEmailRequest {
  string email = 1;
  string password = 2;
  string ip = 3;
  string device_user_agent = 4;
}

message LoginWithEmailReply {
  message AuthToken {
    string id = 1;
    string token = 2;
    google.protobuf.Timestamp not_before_date_time = 3;
    google.protobuf.Timestamp expiration_date_time = 4;
  }
  AuthToken auth_token = 1;
}

message RegisterRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
  string password_confirmation = 5;
}

message RegisterReply {
  message RegisteredUser {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    google.protobuf.Timestamp registered_at = 5;
  }
  RegisteredUser registered_user = 1;
}

message AuthenticateRequest {
  string token = 1;
}

message AuthenticateReply {
  message AuthenticatedUser {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
  }
  AuthenticatedUser authenticated_user = 1;
}
